lib/src/extraction/snapshots/gql_safeguard_lib__extraction__typescript_parser__tests__invalid_fixtures.snap
---
source: lib/src/extraction/typescript_parser.rs
expression: result
---
File: fixtures/invalid/missing_catch.tsx
GraphQL strings found: 1

=== GraphQL String 1 ===
BytePos: 71
Content:

  query GetUserProfileUnprotected($id: ID!) {
    user(id: $id) {
      id
      name
      avatar @throwOnFieldError
      email
    }
  }


---

File: fixtures/invalid/partial_protection.ts
GraphQL strings found: 3

=== GraphQL String 1 ===
BytePos: 61
Content:

  fragment ProtectedFragment on User @catch {
    sensitiveData @throwOnFieldError
    otherData
  }


=== GraphQL String 2 ===
BytePos: 200
Content:

  fragment UnprotectedFragment on User {
    riskyField @throwOnFieldError
    normalField
  }


=== GraphQL String 3 ===
BytePos: 324
Content:

  query MixedQuery($id: ID!) {
    user(id: $id) {
      id
      ...ProtectedFragment
      ...UnprotectedFragment
    }
  }


---

File: fixtures/invalid/unprotected_nested.ts
GraphQL strings found: 4

=== GraphQL String 1 ===
BytePos: 70
Content:

  fragment UserBasicInfoUnprotected on User {
    id
    name
    email
  }


=== GraphQL String 2 ===
BytePos: 187
Content:

  fragment UserAvatarUnprotected on User @throwOnFieldError {
    avatar
    avatarUrl
  }


=== GraphQL String 3 ===
BytePos: 320
Content:

  fragment UserDetailsUnprotected on User {
    ...UserBasicInfoUnprotected
    ...UserAvatarUnprotected
    bio
  }


=== GraphQL String 4 ===
BytePos: 480
Content:

  query GetFullUserUnprotected($id: ID!) {
    user(id: $id) {
      ...UserDetailsUnprotected
    }
  }
