lib/src/extraction/snapshots/gql_safeguard_lib__extraction__typescript_parser__tests__single_file_extraction.snap
---
source: lib/src/extraction/typescript_parser.rs
expression: formatted
---
File: fixtures/valid/fragment_level_catch.ts
GraphQL strings found: 2

=== GraphQL String 1 ===
BytePos: 58
Content:

  fragment RiskyUserData on User @catch {
    sensitiveInfo @throwOnFieldError
    backupEmail @throwOnFieldError
    internalId
  }


=== GraphQL String 2 ===
BytePos: 233
Content:

  query GetUserWithRiskyData($id: ID!) @catch{
    user(id: $id) {
      id
      name
      friends @throwOnFieldError {
        ...RiskyUserData
      }
    }
  }
